--- a/estilos/meiodapagina.css
+++ b/estilos/meiodapagina.css
@@ -1,30 +1,30 @@
 #section-three {
     margin-top: 600px;
-    margin-left: 430px;
+    display: flex;
+    justify-content: center;
 }
 
 #button-pedido {
     margin-top: 15px;
     margin-bottom: 50px;
-    height: 50px;
-    width: 500px;
+    height: 70px;
+    width: 700px;
     border-radius: 30px;
     border: none;
     cursor: pointer;
     background-color: red;
-    font-size: 20px;
+    font-size: 30px;
     color: white;
 }
 
 #button-pedido:hover {
-    opacity: 0.4;
     transform: scale(1.1);
-    transition: 500ms linear;
+    transition: 200ms linear;
 }
 
 
 #button-pedido:active {
-    background-color: palevioletred;
+    background-color: blue;
     color: black;
 }
 
@@ -47,7 +47,7 @@
     width: 700px;
     margin-top: 20px;
     text-align: center;
-    font-size: 20px;
+    font-size: 30px;
     color: black;
 }
 
@@ -82,9 +82,8 @@
 }
 
 #buscar-restaurantes:hover {
-    opacity: 0.4;
     transform: scale(1.1);
-    transition: 500ms linear;
+    transition: 200ms linear;
 }
 
 #buscar-restaurantes:active {
