--- a/estilos/footer.css
+++ b/estilos/footer.css
@@ -1,7 +1,7 @@
 
 #img-final {
     width: 100%;
-    height: 630px;
+    height: 700px;
 }
 
 #section-final {
@@ -44,13 +44,22 @@
 
 #final-footer {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     border-bottom: 5px solid white;
+    padding: 50px;
 }
 
 #last-logo {
     height: 150px;
     margin-left: 12px;
+    margin-bottom: 50px;
     cursor: pointer;
 }
+
+#section-links-final a {
+    font-size: 30px;
+    margin-bottom: 50px;
+}
+
